route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-tracker-route
spec:
  parentRefs:
    - name: ashu-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
